--- a/pos.ipynb
+++ b/pos.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -73,6 +73,10 @@
     "\n",
     "from gensim.models import KeyedVectors\n",
     "\n",
+    "#this model is under /home/bio in the classroom machines\n",
+    "#                    /home/ginter on the virtual server\n",
+    "#                    ...don't make a copy of that file on the virtual server, just use it from that path\n",
+    "#                    ...if you run things locally on your laptop, you can scp this model from the virtual machine\n",
     "vector_model=KeyedVectors.load_word2vec_format(\"data/wiki-news-300d-1M.vec\", binary=False, limit=50000)\n",
     "\n",
     "# sort based on the index to make sure they are in the correct order\n",
@@ -80,8 +84,7 @@
     "print(\"Words from embedding model:\",len(words))\n",
     "print(\"First 50 words:\",words[:50])\n",
     "\n",
-    "# Normalize the vectors\n",
-    "\n",
+    "# Normalize the vectors to unit length\n",
     "print(\"Before normalization:\",vector_model.get_vector(\"in\")[:10])\n",
     "vector_model.init_sims(replace=True)\n",
     "print(\"After normalization:\",vector_model.get_vector(\"in\")[:10])\n",
@@ -89,18 +92,25 @@
     "# Build vocabulary mappings\n",
     "\n",
     "vocabulary={\"<SPECIAL>\": 0, \"<OOV>\": 1} # zero has a special meaning in sequence models, prevent using it for a normal word\n",
-    "for word in words:\n",
+    "for word in words: #these are words from the word2vec model\n",
     "    vocabulary.setdefault(word, len(vocabulary))\n",
     "\n",
     "print(\"Words in vocabulary:\",len(vocabulary))\n",
     "inversed_vocabulary={value:key for key, value in vocabulary.items()} # inverse the dictionary\n",
     "\n",
     "# Label mappings\n",
-    "label_set = set([label for sentence_labels in labels for label in sentence_labels])\n",
-    "label_map = {label: index for index, label in enumerate(label_set)}\n",
+    "# 1) gather a set of unique labels\n",
+    "label_set = set()\n",
+    "for sentence_labels in labels: #loops over sentences \n",
+    "    for label in sentence_labels: #loops over labels in one sentence\n",
+    "        label_set.add(label)\n",
+    "# 2) index these\n",
+    "label_map = {}\n",
+    "for index, label in enumerate(label_set):\n",
+    "    label_map[label]=index\n",
+    "    \n",
     "                \n",
     "# Embedding matrix\n",
-    "\n",
     "def load_pretrained_embeddings(vocab, embedding_model):\n",
     "    \"\"\" vocab: vocabulary from our data vectorizer, embedding_model: model loaded with gensim \"\"\"\n",
     "    pretrained_embeddings=numpy.random.uniform(low=-0.05, high=0.05, size=(len(vocab)-1,embedding_model.vectors.shape[1]))\n",
@@ -127,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +163,7 @@
     "        \n",
     "        sentence_lengths.append(len(one_example))\n",
     "        \n",
-    "    vectorized_data = numpy.array(vectorized_data) # turn python list into numpy matrix\n",
+    "    vectorized_data = numpy.array(vectorized_data) # turn python list into numpy array\n",
     "    vectorized_labels = numpy.array(vectorized_labels)\n",
     "    \n",
     "    return vectorized_data, vectorized_labels, sentence_lengths\n",
@@ -172,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -205,36 +215,36 @@
       "     0     0     0     0     0     0     0     0     0     0     0     0\n",
       "     0     0     0]\n",
       "Padded labels shape: (12543, 159, 1)\n",
-      "{'ADP': 0, 'INTJ': 1, 'DET': 2, 'PART': 3, 'NUM': 13, 'ADJ': 5, 'PROPN': 8, 'SCONJ': 9, 'PUNCT': 7, 'NOUN': 10, 'VERB': 11, 'PRON': 12, 'SYM': 15, 'ADV': 4, 'X': 14, 'AUX': 16, 'CCONJ': 6}\n",
-      "First example labels: [[ 8]\n",
-      " [ 7]\n",
-      " [ 8]\n",
-      " [ 7]\n",
-      " [ 5]\n",
+      "{'AUX': 0, 'PROPN': 1, 'PUNCT': 3, 'NUM': 4, 'DET': 5, 'INTJ': 15, 'ADV': 7, 'SCONJ': 8, 'PART': 9, 'ADJ': 10, 'X': 13, 'CCONJ': 12, 'NOUN': 2, 'PRON': 14, 'ADP': 6, 'VERB': 11, 'SYM': 16}\n",
+      "First example labels: [[ 1]\n",
+      " [ 3]\n",
+      " [ 1]\n",
+      " [ 3]\n",
       " [10]\n",
+      " [ 2]\n",
       " [11]\n",
-      " [ 8]\n",
-      " [ 8]\n",
-      " [ 8]\n",
-      " [ 7]\n",
-      " [ 8]\n",
-      " [ 7]\n",
+      " [ 1]\n",
+      " [ 1]\n",
+      " [ 1]\n",
+      " [ 3]\n",
+      " [ 1]\n",
+      " [ 3]\n",
+      " [ 5]\n",
       " [ 2]\n",
-      " [10]\n",
-      " [ 0]\n",
+      " [ 6]\n",
+      " [ 5]\n",
       " [ 2]\n",
-      " [10]\n",
-      " [ 0]\n",
+      " [ 6]\n",
+      " [ 5]\n",
       " [ 2]\n",
-      " [10]\n",
-      " [ 0]\n",
-      " [ 8]\n",
-      " [ 7]\n",
-      " [ 0]\n",
-      " [ 2]\n",
+      " [ 6]\n",
+      " [ 1]\n",
+      " [ 3]\n",
+      " [ 6]\n",
       " [ 5]\n",
       " [10]\n",
-      " [ 7]\n",
+      " [ 2]\n",
+      " [ 3]\n",
       " [ 0]\n",
       " [ 0]\n",
       " [ 0]\n",
@@ -415,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -476,19 +486,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /usr/local/lib/python3.5/dist-packages/keras/backend/tensorflow_backend.py:1349: calling reduce_mean (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 159)               0         \n",
+      "input_2 (InputLayer)         (None, 159)               0         \n",
       "_________________________________________________________________\n",
-      "embedding_1 (Embedding)      (None, 159, 300)          15000600  \n",
+      "embedding_2 (Embedding)      (None, 159, 300)          15000600  \n",
       "_________________________________________________________________\n",
-      "time_distributed_1 (TimeDist (None, 159, 100)          30100     \n",
+      "time_distributed_3 (TimeDist (None, 159, 100)          30100     \n",
       "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 159, 17)           1717      \n",
+      "time_distributed_4 (TimeDist (None, 159, 17)           1717      \n",
       "=================================================================\n",
       "Total params: 15,032,417\n",
       "Trainable params: 31,817\n",
@@ -496,42 +503,42 @@
       "_________________________________________________________________\n",
       "None\n",
       "Epoch 1/10\n",
-      "Accuracy: 0.2624254473161034\n",
-      " - 2s - loss: 27.0499\n",
+      "Accuracy: 0.7534791252485089\n",
+      " - 8s - loss: 17.5141\n",
       "Epoch 2/10\n",
-      "Accuracy: 0.3205168986083499\n",
-      " - 1s - loss: 25.7245\n",
+      "Accuracy: 0.8245725646123261\n",
+      " - 9s - loss: 7.1229\n",
       "Epoch 3/10\n",
-      "Accuracy: 0.4422266401590457\n",
-      " - 1s - loss: 24.0143\n",
+      "Accuracy: 0.8488270377733599\n",
+      " - 9s - loss: 4.9680\n",
       "Epoch 4/10\n",
-      "Accuracy: 0.5137574552683897\n",
-      " - 1s - loss: 21.4225\n",
+      "Accuracy: 0.8571769383697813\n",
+      " - 9s - loss: 4.3145\n",
       "Epoch 5/10\n",
-      "Accuracy: 0.5470775347912525\n",
-      " - 1s - loss: 18.7635\n",
+      "Accuracy: 0.8610337972166998\n",
+      " - 8s - loss: 4.0309\n",
       "Epoch 6/10\n",
-      "Accuracy: 0.5760238568588469\n",
-      " - 1s - loss: 16.5152\n",
+      "Accuracy: 0.8630616302186879\n",
+      " - 8s - loss: 3.8638\n",
       "Epoch 7/10\n",
-      "Accuracy: 0.5933598409542744\n",
-      " - 1s - loss: 14.7772\n",
+      "Accuracy: 0.8640954274353877\n",
+      " - 9s - loss: 3.7535\n",
       "Epoch 8/10\n",
-      "Accuracy: 0.6191252485089463\n",
-      " - 1s - loss: 13.3808\n",
+      "Accuracy: 0.8652485089463221\n",
+      " - 9s - loss: 3.6703\n",
       "Epoch 9/10\n",
-      "Accuracy: 0.691610337972167\n",
-      " - 1s - loss: 12.1142\n",
+      "Accuracy: 0.8649304174950299\n",
+      " - 8s - loss: 3.6242\n",
       "Epoch 10/10\n",
-      "Accuracy: 0.7186083499005964\n",
-      " - 1s - loss: 11.0328\n"
+      "Accuracy: 0.865844930417495\n",
+      " - 9s - loss: 3.5639\n"
      ]
     }
    ],
    "source": [
     "inp=Input(shape=(sequence_len,))\n",
     "embeddings=Embedding(len(vocabulary), vector_size, mask_zero=True, trainable=False, weights=[pretrained])(inp)\n",
-    "hidden = TimeDistributed(Dense(100, activation=\"softmax\"))(embeddings)\n",
+    "hidden = TimeDistributed(Dense(100, activation=\"tanh\"))(embeddings)\n",
     "outp = TimeDistributed(Dense(class_count, activation=\"softmax\"))(hidden)\n",
     "model=Model(inputs=[inp], outputs=[outp])\n",
     "\n",
@@ -614,7 +621,7 @@
    "source": [
     "inp=Input(shape=(sequence_len,))\n",
     "embeddings=Embedding(len(vocabulary), vector_size, mask_zero=False, trainable=False, weights=[pretrained])(inp)\n",
-    "cnn = Conv1D(100,3, activation='relu', padding='same')(embeddings)\n",
+    "cnn = Conv1D(100, 3, activation='relu', padding='same')(embeddings)\n",
     "outp=TimeDistributed(Dense(class_count, activation=\"softmax\"))(cnn)\n",
     "model=Model(inputs=[inp], outputs=[outp])\n",
     "\n",
