--- a/read_pos.ipynb
+++ b/read_pos.ipynb
@@ -33,7 +33,9 @@
     "            elif line.startswith('#'): # These are metadata lines we can skip\n",
     "                continue\n",
     "            else:\n",
-    "                data = line.strip().split()\n",
+    "                data = line.strip().split(\"\\t\")\n",
+    "                if \"-\" in data[0]: #token range line, skip\n",
+    "                    continy\n",
     "                sentence_tokens.append(data[1])\n",
     "                sentence_tags.append(data[3])\n",
     "    with open(out_path, 'w') as output_file:\n",
