--- a/read_pos.ipynb
+++ b/read_pos.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "            else:\n",
     "                data = line.strip().split(\"\\t\")\n",
     "                if \"-\" in data[0]: #token range line, skip\n",
-    "                    continy\n",
+    "                    continue\n",
     "                sentence_tokens.append(data[1])\n",
     "                sentence_tags.append(data[3])\n",
     "    with open(out_path, 'w') as output_file:\n",
@@ -44,14 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "to_json('UD_English-EWT/en-ud-train.conllu', 'data/pos_train.json')\n",
-    "to_json('UD_English-EWT/en-ud-dev.conllu', 'data/pos_devel.json')"
+    "to_json('UD_English-EWT/en-ud-dev.conllu', 'data/pos_devel.json')\n",
+    "to_json('UD_Finnish-TDT/fi-ud-train.conllu', 'data/pos_train_fi.json')\n",
+    "to_json('UD_Finnish-TDT/fi-ud-dev.conllu', 'data/pos_devel_fi.json')"
    ]
   }
  ],
