--- a/project_word_embeddings.ipynb
+++ b/project_word_embeddings.ipynb
@@ -20,9 +20,10 @@
     "* https://github.com/spyysalo/wvlib -- several English datasets and evaluation scripts\n",
     "* analogy_fin and analogy_en in the data directory of the course\n",
     "\n",
-    "## Milestone 3\n",
+    "## Milestone 3 -- analogy as a mapping\n",
     "\n",
-    "TODO :)"
+    "The analogy task uses a simple vector arithmetics to solve problems of the type \"king - man + woman = queen\". You have seen some of my skepticism towards this in the class, and you tested the validity of this arithmetics for yourself in the classes and in milestone 2. You were also shown how to map the embeddings - on the example of mapping between two languages. The king-man-woman-queen style analogy is naturally also a mapping of a kind and therefore it should be learnable like any other mapping. In this milestone, you should therefore solve the word analogy as a learnable task, applying to it your knowledge from the cross-lingual mapping example. Are you able to get any better results, especially for Finnish where the basic analogy does not work that great? Do the learned weights which combine the three vectors to obtain the fourth correspond to the +1 -1 and +1 as in the simple arithmetics? Or are they entirely different? Are there any differeces in performance on the various sub-tasks of the analogy dataset? Summarize your findings.\n",
+    "\n"
    ]
   }
  ],
