--- a/running_code.ipynb
+++ b/running_code.ipynb
@@ -4,150 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Running and editing the code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can run and edit the code either on the classroom computers, your own laptop or on the course server. Preferably in that order, so there will not be huge traffic on the server, causing long training times."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Classroom computers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you are running the code on the classroom computers, you need to install some software locally.\n",
+    "# Running and editing the code\n",
     "\n",
-    "If you haven't already, clone the course github repository."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git clone https://github.com/TurkuNLP/Deep_Learning_in_LangTech_course"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will clone the repository into a folder \"Deep_Learning_in_LangTech_course\". Inside this folder run these commands:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip3 install -r requirements.txt --user\n",
-    "export PATH=$PATH:~/.local/bin\n",
-    "echo \"PATH=$PATH:~/.local/bin\" >> ~/.bashrc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can now start jupyter by running:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jupyter notebook"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Browser should open on its own, but if not, there is a link in the terminal output."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Own laptop"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The installation procedure should be fairly similiar on your own laptop, assuming you have python installed and know where pip is. (Ask for help, depends on your OS etc.) Use the above commands."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Course server"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you plan on running everything on the course server, you don't need to install anything, but you do need to do port forwarding for the jupyter notebooks. Pick a RANDOM port between 6000 and 65000.\n",
+    "You can use two online environments:\n",
     "\n",
-    "Connect to the course server using this command: (Linux / Mac)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ssh -L YOURPORTNUMBERHERE:localhost:YOURPORTNUMBERHERE vm0964.kaj.pouta.csc.fi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "On windows you need to do the port forwarding through PuTTY. This is done in connection settings / SSH / tunnels. There you want to add a tunnel whose source port is your port number and the target is `localhost:your-port-number`. Remember to press `add` and remember to save the settings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now you can clone the course github repository using above commands.\n",
-    "Run jupyter using your random port:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jupyter notebook --port YOURPORTNUMBERHERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will now run jupyter on the course server, and (through the ssh tunneling) you can access it from your local browser on the address given in the jupyter output."
+    "* [CSC notebooks](https://notebooks.csc.fi)\n",
+    "* [Google Colab](https://colab.research.google.com/)\n",
+    "\n",
+    "We will go through these in the class. The advantage of CSC notebooks is the full terminal access, the advantage of Google Colab is access to GPU accelerators, which we will need especially towards the end of the course. All course slides and material are in this GitHub repository:\n",
+    "\n",
+    "`git clone https://github.com/TurkuNLP/Deep_Learning_in_LangTech_course`\n",
+    "\n",
+    "Neither of the environments has a default persistence, i.e. the virtual machine is deleted together with all data on it when your session ends. Google Colab, however, allows you to mount your Google drive as a directory, and it also allows you to open notebooks directly from github (as will be shown in the classes)"
    ]
   }
  ],
@@ -167,9 +35,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
