--- a/bow_classifier_features.ipynb
+++ b/bow_classifier_features.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<keras.engine.training.Model object at 0x7f3483205050>\n"
+      "<keras.engine.training.Model object at 0x7f348132e1d0>\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,9 +57,9 @@
        "<g class=\"graph\" id=\"graph0\" transform=\"scale(.9028 .9028) rotate(0) translate(4 217)\">\n",
        "<title>G</title>\n",
        "<polygon fill=\"#ffffff\" points=\"-4,4 -4,-217 232,-217 232,4 -4,4\" stroke=\"transparent\"/>\n",
-       "<!-- 139863495830416 -->\n",
+       "<!-- 139863482828816 -->\n",
        "<g class=\"node\" id=\"node1\">\n",
-       "<title>139863495830416</title>\n",
+       "<title>139863482828816</title>\n",
        "<polygon fill=\"none\" points=\"0,-166.5 0,-212.5 228,-212.5 228,-166.5 0,-166.5\" stroke=\"#000000\"/>\n",
        "<text fill=\"#000000\" font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"38.5\" y=\"-185.8\">InputLayer</text>\n",
        "<polyline fill=\"none\" points=\"77,-166.5 77,-212.5 \" stroke=\"#000000\"/>\n",
@@ -71,9 +71,9 @@
        "<polyline fill=\"none\" points=\"132,-189.5 228,-189.5 \" stroke=\"#000000\"/>\n",
        "<text fill=\"#000000\" font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"180\" y=\"-174.3\">(None, 74849)</text>\n",
        "</g>\n",
-       "<!-- 139863495830480 -->\n",
+       "<!-- 139863482828240 -->\n",
        "<g class=\"node\" id=\"node2\">\n",
-       "<title>139863495830480</title>\n",
+       "<title>139863482828240</title>\n",
        "<polygon fill=\"none\" points=\"13.5,-83.5 13.5,-129.5 214.5,-129.5 214.5,-83.5 13.5,-83.5\" stroke=\"#000000\"/>\n",
        "<text fill=\"#000000\" font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"38.5\" y=\"-102.8\">Dense</text>\n",
        "<polyline fill=\"none\" points=\"63.5,-83.5 63.5,-129.5 \" stroke=\"#000000\"/>\n",
@@ -85,15 +85,15 @@
        "<polyline fill=\"none\" points=\"118.5,-106.5 214.5,-106.5 \" stroke=\"#000000\"/>\n",
        "<text fill=\"#000000\" font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"166.5\" y=\"-91.3\">(None, 200)</text>\n",
        "</g>\n",
-       "<!-- 139863495830416&#45;&gt;139863495830480 -->\n",
+       "<!-- 139863482828816&#45;&gt;139863482828240 -->\n",
        "<g class=\"edge\" id=\"edge1\">\n",
-       "<title>139863495830416-&gt;139863495830480</title>\n",
+       "<title>139863482828816-&gt;139863482828240</title>\n",
        "<path d=\"M114,-166.3799C114,-158.1745 114,-148.7679 114,-139.8786\" fill=\"none\" stroke=\"#000000\"/>\n",
        "<polygon fill=\"#000000\" points=\"117.5001,-139.784 114,-129.784 110.5001,-139.784 117.5001,-139.784\" stroke=\"#000000\"/>\n",
        "</g>\n",
-       "<!-- 139863495830288 -->\n",
+       "<!-- 139863484386832 -->\n",
        "<g class=\"node\" id=\"node3\">\n",
-       "<title>139863495830288</title>\n",
+       "<title>139863484386832</title>\n",
        "<polygon fill=\"none\" points=\"20,-.5 20,-46.5 208,-46.5 208,-.5 20,-.5\" stroke=\"#000000\"/>\n",
        "<text fill=\"#000000\" font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"45\" y=\"-19.8\">Dense</text>\n",
        "<polyline fill=\"none\" points=\"70,-.5 70,-46.5 \" stroke=\"#000000\"/>\n",
@@ -105,9 +105,9 @@
        "<polyline fill=\"none\" points=\"125,-23.5 208,-23.5 \" stroke=\"#000000\"/>\n",
        "<text fill=\"#000000\" font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"166.5\" y=\"-8.3\">(None, 2)</text>\n",
        "</g>\n",
-       "<!-- 139863495830480&#45;&gt;139863495830288 -->\n",
+       "<!-- 139863482828240&#45;&gt;139863484386832 -->\n",
        "<g class=\"edge\" id=\"edge2\">\n",
-       "<title>139863495830480-&gt;139863495830288</title>\n",
+       "<title>139863482828240-&gt;139863484386832</title>\n",
        "<path d=\"M114,-83.3799C114,-75.1745 114,-65.7679 114,-56.8786\" fill=\"none\" stroke=\"#000000\"/>\n",
        "<polygon fill=\"#000000\" points=\"117.5001,-56.784 114,-46.784 110.5001,-56.784 117.5001,-56.784\" stroke=\"#000000\"/>\n",
        "</g>\n",
@@ -118,7 +118,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "(74849, 200)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
