--- a/bow_classifier_with_embeddings.ipynb
+++ b/bow_classifier_with_embeddings.ipynb
@@ -6,25 +6,26 @@
    "source": [
     "# Bag-of-words classifier with pretrained word embeddings\n",
     "\n",
-    "- If we have a trained word embeddings model, we can transfer that knowledge into a new task and model\n",
-    "- Initialize the weights in the classifier with pretrained word embeddings\n",
-    "- Word embeddings downloaded at https://s3-us-west-1.amazonaws.com/fasttext-vectors/wiki-news-300d-1M.vec.zip\n",
+    "- During the lecture we will cover the concept of embeddings and the simple word2vec method\n",
+    "- If we have a trained word embeddings model, we can transfer that knowledge into a new task and model (transfer learning)\n",
+    "- What we achieve here: Initialize the weights in the classifier with pretrained word embeddings\n",
+    "- Word embeddings downloaded at: https://dl.fbaipublicfiles.com/fasttext/vectors-english/wiki-news-300d-1M.vec.zip\n",
     "\n",
     "### Read data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'class': 'neg', 'text': \"I have walked out of about 6 movies my entire life. This was one of the worst movies I have ever seen. I don't know how I sat through an hour of it. I must have been in a coma that night. I saw it in the theatre when it came out 8 years ago. I couldn't even remember the name, but I knew that Penelope Ann Miller starred in it. It must have really affected me to be wasting my time commenting on it today. Yech! Vomit! Barf!\"}\n",
-      "[\"I have walked out of about 6 movies my entire life. This was one of the worst movies I have ever seen. I don't know how I sat through an hour of it. I must have been in a coma that night. I saw it in the theatre when it came out 8 years ago. I couldn't even remember the name, but I knew that Penelope Ann Miller starred in it. It must have really affected me to be wasting my time commenting on it today. Yech! Vomit! Barf!\", 'Seriously, I\\'ve read some of the reviews on this film, and I have to ask, were you people watching the same movie.  Yes, I give the set directors a lot of credit for being able to recreate 1930 vintage Los Angeles, but so what?   None of the characters are likable, the story seems aimless, Karen Black is simply not a very good actress. Donald Sutherland is just icky. (and his character \\\\Homer Simpson\\\\\" makes me wish for the animated version. D\\'oh!) Then you had the creepy child actor, the creepier Billy Barty, and so on.  This is one of those films cinema buffs love and the rest of us look at each other and go, \\\\\"What the heck!\\\\\"\"']\n",
-      "['neg', 'neg']\n"
+      "{'class': 'neg', 'text': 'Just finished this movie... saw it on the video shelf and being a Nick Stahl fan I just had to rent it. In all honesty, it probably should have stayed on the shelf. The concept was an interesting one and there were several fairly smart twists and turns but somehow I guessed almost all of them before they came along. And the movie just went a little too far in the end in my opinion... if you have to suffer through a viewing of it you\\'ll see what I mean!  On a positive note, Nick Stahl\\'s acting was great (especially considering what he had to work with). Eddie Kaye Thomas was also good but he always plays the same type of character... too much Paul Finch from \\\\American Pie\\\\\" coming through for my liking.  And finally, the worst part of this movie has to be January Jones\\' emotionless performance... I guess a pretty face really is all that matters in Hollywood.\"'}\n",
+      "['Just finished this movie... saw it on the video shelf and being a Nick Stahl fan I just had to rent it. In all honesty, it probably should have stayed on the shelf. The concept was an interesting one and there were several fairly smart twists and turns but somehow I guessed almost all of them before they came along. And the movie just went a little too far in the end in my opinion... if you have to suffer through a viewing of it you\\'ll see what I mean!  On a positive note, Nick Stahl\\'s acting was great (especially considering what he had to work with). Eddie Kaye Thomas was also good but he always plays the same type of character... too much Paul Finch from \\\\American Pie\\\\\" coming through for my liking.  And finally, the worst part of this movie has to be January Jones\\' emotionless performance... I guess a pretty face really is all that matters in Hollywood.\"', \"This is a excellent series. You will laugh, you will cry, these wonderful people will be a part of your family. The way this family cares for one another and helps each other through their crisis sets a great example of the way we should live our lives. There are many good things they do, and a number of bad choices, but they never turn their backs on family, they work through problems. Michelle, the youngest daughter, is the cutest thing I've seen. Stephanie, the middle daughter, suffers with Middle Child Syndrome and with the help of EVERYONE in the family it's better. DJ, the oldest daughter, is growing up whether her dad wants it to happen or not. One thing they all share is they miss their mom. Danny (Dad), Joey, and Uncle Jesse love these kids so much, and it's apparent in every episode.\"]\n",
+      "['neg', 'pos']\n"
      ]
     }
    ],
@@ -52,7 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import KeyedVectors\n",
+    "\n",
+    "#Only grab the 100K most common entries\n",
+    "vector_model=KeyedVectors.load_word2vec_format(\"data/wiki-news-300d-1M.vec\", binary=False, limit=100000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -65,9 +78,6 @@
     }
    ],
    "source": [
-    "from gensim.models import KeyedVectors\n",
-    "\n",
-    "vector_model=KeyedVectors.load_word2vec_format(\"data/wiki-news-300d-1M.vec\", binary=False, limit=100000)\n",
     "# sort based on the index to make sure they are in the correct order\n",
     "words=[k for k,v in sorted(vector_model.vocab.items(), key=lambda x:x[1].index)]\n",
     "print(\"Words from embedding model:\",len(words))\n",
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['have', 'walked', 'out', 'of', 'about', 'movies', 'my', 'entire', 'life', 'This', 'was', 'one', 'of', 'the', 'worst', 'movies', 'have', 'ever', 'seen', 'don', 'know', 'how', 'sat', 'through', 'an', 'hour', 'of', 'it', 'must', 'have', 'been', 'in', 'coma', 'that', 'night', 'saw', 'it', 'in', 'the', 'theatre', 'when', 'it', 'came', 'out', 'years', 'ago', 'couldn', 'even', 'remember', 'the', 'name', 'but', 'knew', 'that', 'Penelope', 'Ann', 'Miller', 'starred', 'in', 'it', 'It', 'must', 'have', 'really', 'affected', 'me', 'to', 'be', 'wasting', 'my', 'time', 'commenting', 'on', 'it', 'today', 'Yech', 'Vomit', 'Barf']\n"
+      "['Just', 'finished', 'this', 'movie', 'saw', 'it', 'on', 'the', 'video', 'shelf', 'and', 'being', 'Nick', 'Stahl', 'fan', 'just', 'had', 'to', 'rent', 'it', 'In', 'all', 'honesty', 'it', 'probably', 'should', 'have', 'stayed', 'on', 'the', 'shelf', 'The', 'concept', 'was', 'an', 'interesting', 'one', 'and', 'there', 'were', 'several', 'fairly', 'smart', 'twists', 'and', 'turns', 'but', 'somehow', 'guessed', 'almost', 'all', 'of', 'them', 'before', 'they', 'came', 'along', 'And', 'the', 'movie', 'just', 'went', 'little', 'too', 'far', 'in', 'the', 'end', 'in', 'my', 'opinion', 'if', 'you', 'have', 'to', 'suffer', 'through', 'viewing', 'of', 'it', 'you', 'll', 'see', 'what', 'mean', 'On', 'positive', 'note', 'Nick', 'Stahl', 'acting', 'was', 'great', 'especially', 'considering', 'what', 'he', 'had', 'to', 'work', 'with', 'Eddie', 'Kaye', 'Thomas', 'was', 'also', 'good', 'but', 'he', 'always', 'plays', 'the', 'same', 'type', 'of', 'character', 'too', 'much', 'Paul', 'Finch', 'from', 'American', 'Pie', 'coming', 'through', 'for', 'my', 'liking', 'And', 'finally', 'the', 'worst', 'part', 'of', 'this', 'movie', 'has', 'to', 'be', 'January', 'Jones', 'emotionless', 'performance', 'guess', 'pretty', 'face', 'really', 'is', 'all', 'that', 'matters', 'in', 'Hollywood']\n"
      ]
     }
    ],
@@ -424,7 +434,7 @@
       "Epoch 2/50\n",
       "22500/22500 [==============================] - 304s 14ms/step - loss: 0.2794 - accuracy: 0.9012 - val_loss: 0.2693 - val_accuracy: 0.8988\n",
       "Epoch 3/50\n",
-      "14600/22500 [==================>...........] - ETA: 1:43 - loss: 0.1912 - accuracy: 0.9404"
+      "20200/22500 [=========================>....] - ETA: 30s - loss: 0.1873 - accuracy: 0.9401"
      ]
     }
    ],
