--- a/bow_classifier_with_embeddings_simpler.ipynb
+++ b/bow_classifier_with_embeddings_simpler.ipynb
@@ -69,15 +69,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! wget "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -85,7 +76,7 @@
     "from gensim.models import KeyedVectors\n",
     "\n",
     "#Only grab the 100K most common entries\n",
-    "vector_model=KeyedVectors.load_word2vec_format(\"data/wiki-news-300d-100K.vec.gz\", binary=False, limit=100000)"
+    "vector_model=KeyedVectors.load_word2vec_format(\"data/wiki-news-300d-1M.vec.gz\", binary=False, limit=100000)"
    ]
   },
   {
@@ -305,7 +296,7 @@
     "\n",
     "* The embedding matrix can be obtained straight from the vector_model\n",
     "* We have a little problem, though because we added a padding symbol at index 0\n",
-    "* So now we need to add a row of zeros for it"
+    "* So now we need to add a row of zeros for it, or else our embedding lookup will be off by one"
    ]
   },
   {
@@ -513,9 +504,9 @@
    "source": [
     "from keras.models import Model\n",
     "from keras.layers import Input, Dense, Embedding, Activation, GlobalAveragePooling1D\n",
-    "from keras import backend as K\n",
-    "from keras.layers.core import Lambda\n",
     "from keras.optimizers import SGD, Adam\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "\n",
     "\n",
     "example_count,sequence_len=vectorized_data_padded.shape\n",
     "class_count=len(label_encoder.classes_)\n",
@@ -535,6 +526,7 @@
     "print(model.summary())\n",
     "\n",
     "# train\n",
+    "stop_cb=EarlyStopping(monitor='val_loss', patience=2, verbose=1, mode='auto', baseline=None, restore_best_weights=True)\n",
     "hist=model.fit(vectorized_data_padded,class_numbers,batch_size=100,verbose=1,epochs=50,validation_split=0.1)"
    ]
   },
