--- a/embedding_properties.ipynb
+++ b/embedding_properties.ipynb
@@ -963,9 +963,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv-jupyter",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv-jupyter"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -977,9 +977,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
