--- a/cnn_text_task.ipynb
+++ b/cnn_text_task.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "### The simple model, written in functional API and without binary crossentropy\n",
     "\n",
-    "Use this to play with the different parameters. How much do they affect the end result? How is this model different from the one above it?"
+    "Task 1.\n",
+    "Use this to play with the different parameters.\n",
+    "How much do they affect the end result?\n",
+    "What did you try?\n",
+    "\n",
+    "Task 2. More layers usually means more power. Can you add another convolution layer to the model? Did it work for you?"
    ]
   },
   {
@@ -96,21 +101,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
