--- a/cnn_text_task.ipynb
+++ b/cnn_text_task.ipynb
@@ -11,6 +11,8 @@
     "How much do they affect the end result?\n",
     "What did you try?\n",
     "\n",
+    "Hint: Some reasonable parameters to mess with are eg: filters\n",
+    "\n",
     "Task 2. More layers usually means more power. Can you add another convolution layer to the model? Did it work for you?"
    ]
   },
