add minor details

--- a/project_ner_2020.ipynb
+++ b/project_ner_2020.ipynb
@@ -95,7 +95,7 @@
     "<h4>3.1 Predictions on unannotated text</h4><br>\n",
     "Use the three models selected in milestone 2.2 to do predictions on the [sampled wikipedia text](http://dl.turkunlp.org/TKO_8965-projects/ner/).\n",
     "<h4>3.2 Statistically analyze the results</h4><br>\n",
-    "Statistically analyze and compare the predictions. You can, for example, analyze if some models tend to predict more entities starting with a capital letter, or if some models predict more entities for some specific classes than others.\n",
+    "Statistically analyze (i.e. count the number of instances) and compare the predictions. You can, for example, analyze if some models tend to predict more entities starting with a capital letter, or if some models predict more entities for some specific classes than others.\n",
     "<!--Look at the entities your models predict. Can you identify any systematic errors? Are the systematic errors the same as the ones found in milestone 2.2?-->"
    ]
   }
